clusters/production/olm/olm.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: olm
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-traffic
  namespace: olm
spec:
  podSelector: { }
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: olm-operator
  namespace: olm
spec:
  podSelector:
    matchLabels:
      app: olm-operator
  ingress:
    - 
      ports:
      - port: metrics
        protocol: TCP
  egress:
    - 
      ports:
      - port: 6443
        protocol: TCP
    - 
      ports:
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: catalog-operator
  namespace: olm
spec:
  podSelector:
    matchLabels:
      app: catalog-operator
  ingress:
    - 
      ports:
      - port: metrics
        protocol: TCP
  egress:
    - 
      ports:
      - port: 6443
        protocol: TCP
    - 
      ports:
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
    - ports:
      - protocol: TCP
        port: 50051
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: packageserver
  namespace: olm
spec:
  podSelector:
    matchLabels:
      app: packageserver
  ingress:
    - ports:
      - protocol: TCP
        port: 5443
  egress:
    - 
      ports:
      - port: 6443
        protocol: TCP
    - 
      ports:
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
    - ports:
      - protocol: TCP
        port: 50051
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olm-operator
  namespace: olm
  labels:
    app: olm-operator
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: olm-operator
  template:
    metadata:
      labels:
        app: olm-operator
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: olm-operator-serviceaccount
      volumes:
      - name: tmpfs
        emptyDir: {}
      containers:
        - name: olm-operator
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ "ALL" ]
          volumeMounts:
          - name: tmpfs
            mountPath: /tmp
          command:
          - /bin/olm
          args:
          - --namespace
          - $(OPERATOR_NAMESPACE)
          - --writeStatusName
          - ""
          image: quay.io/operator-framework/olm@sha256:81b48807f8fb1104215313235e429fa6a6abb446aaa6361b385924c58d6b0aa3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: metrics
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
          terminationMessagePolicy: FallbackToLogsOnError
          resources:
            requests:
              cpu: 10m
              memory: 160Mi
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-operator
  namespace: olm
  labels:
    app: catalog-operator
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: catalog-operator
  template:
    metadata:
      labels:
        app: catalog-operator
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: olm-operator-serviceaccount
      volumes:
      - name: tmpfs
        emptyDir: {}
      containers:
        - name: catalog-operator
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ "ALL" ]
          volumeMounts:
          - name: tmpfs
            mountPath: /tmp
          command:
          - /bin/catalog
          args:
          - '--namespace'
          - olm
          - --configmapServerImage=quay.io/operator-framework/configmap-operator-registry:latest
          - --opmImage=quay.io/operator-framework/opm@sha256:6f3cdbbc97a70069a0aaf0ccbb863529a06f50cfa248a309b9c26fa84d1954ad
          - --util-image
          -  quay.io/operator-framework/olm@sha256:81b48807f8fb1104215313235e429fa6a6abb446aaa6361b385924c58d6b0aa3
          - --set-workload-user-id=true
          image: quay.io/operator-framework/olm@sha256:81b48807f8fb1104215313235e429fa6a6abb446aaa6361b385924c58d6b0aa3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: metrics
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
          terminationMessagePolicy: FallbackToLogsOnError
          resources:
            requests:
              cpu: 10m
              memory: 80Mi
      nodeSelector:
        kubernetes.io/os: linux
